; ModuleID = '/home/carl/AnghaBench/php-src/ext/zlib/extr_zlib_fopen_wrapper.c_php_gziop_flush.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/zlib/extr_zlib_fopen_wrapper.c_php_gziop_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }
%struct.php_gz_stream_data_t = type { i32 }

@Z_SYNC_FLUSH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*)* @php_gziop_flush to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @php_gziop_flush(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca %struct.php_gz_stream_data_t*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = inttoptr i64 %6 to %struct.php_gz_stream_data_t*
  store %struct.php_gz_stream_data_t* %7, %struct.php_gz_stream_data_t** %3, align 8
  %8 = load %struct.php_gz_stream_data_t*, %struct.php_gz_stream_data_t** %3, align 8
  %9 = getelementptr inbounds %struct.php_gz_stream_data_t, %struct.php_gz_stream_data_t* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @Z_SYNC_FLUSH, align 4
  %12 = call i32 @gzflush(i32 %10, i32 %11)
  ret i32 %12
}

declare dso_local i32 @gzflush(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
